2021-11-26::
* https://github.com/docToolchain/doctoolchain.github.io/issues/18[#18 gradle daemon has memory problems]
2021-11-15::
* https://github.com/docToolchain/docToolchain/pull/696[#696 - exportContributors - not everybody is rendered]
* https://github.com/docToolchain/docToolchain/pull/697[#697 - exportToMarkdown docs are not referenced correctly]

=== added

2021-12-09::
* https://github.com/docToolchain/docToolchain/pull/714[#714 - Update exportExcel.gradle]

2021-11-30::
* https://github.com/docToolchain/docToolchain/pull/706[#706 - exportEA: Add check if diagrams shall be overwritten]

2021-11-13::
* https://github.com/docToolchain/docToolchain/pull/686[#686 - Add resourceDirs option]

=== changed

2022-03-09::
* upgraded underlying gradle from 6.7.1 to 6.9.2

2022-03-08::
* downloadTemplate: upgraded download plugin
* https://github.com/docToolchain/docToolchain/issue/817[#817 htmlSanityCheck remove dependency to generateHTML]
2022-02-09::
* https://github.com/docToolchain/docToolchain/issue/795[#795 publishToConfluence: added hint for wrong configuration]
2022-01-23::
* https://github.com/docToolchain/docToolchain/pull/756[#756  exportEA: Add two more items for export]
2021-12-23::
* https://github.com/docToolchain/docToolchain/issues/730[#730 "improve this doc" and "create and issue" links]
2021-12-09::
* make build output less noisy - use logger instead of println
2021-12-08::
* changed wording of landing page (thanx to Jody Winter)
2021-12-04::
* changed java download hint from oracle to https://adoptium.net/
2021-11-30::
* refactored config file
2021-11-14::
* refactored jbake template "menu.gsp"

== 2.0.4 - 2022-03-09

there was a major bug in this release, please ignore

== 2.0.3 - 2021-11-11

=== added

* https://github.com/docToolchain/docToolchain/issues/681[#681 - Please reactivate single page manual on v2.0.x site]

=== fixed

2021-11-10::