@@ -66,5 +66,6 @@ Please get in touch to update your entry or let us know if you have contributed 
 - https://github.com/JodyWinter[Jody Winter]
 - https://github.com/CollierCZ[Aaron Collier]
 - https://github.com/Bennykillua[Ifeanyi Benedict Iheagwara]
+- https://github.com/Vierheller[Jan-Niklas Vierheller]
 
 image::https://img.shields.io/github/contributors/doctoolchain/doctoolchain.svg[link=https://github.com/docToolchain/docToolchain/graphs/contributors]
